@@ -1,3 +1,8 @@
+2004-01-19 Paul Jakma <paul@dishone.st>
+
+	* sigevent.{c,h}: New files, implement event handled signals.
+	  see signal_init() in sigevent.h.
+	  
 2003-12-23  Vincent Jardin  <jardin@6wind.com>
 
 	* {command.c, memory.c, vty.c, zebra.h}: Add isisd support
